--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,52 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --primary-color: #0000ff;
+  --primary-light: #5252f5;
+  --white: #fff
+}
+
+@layer base {
+  /* Define the padding for list items */
+  li {
+    @apply p-4;
+  }
+  h1 {
+    @apply text-3xl md:text-4xl font-bold;
+  }
+
+  h2 {
+    @apply text-3xl font-bold;
+  }
+
+  h3 {
+    @apply text-xl font-bold;
+  }
+
+  button {
+    @apply p-3 border bg-gradient-to-r from-[var(--primary-color)]  to-[var(--primary-light)] text-white rounded-md;
+  }
+
+  .icon {
+    @apply text-2xl cursor-pointer;
+  }
+}
+
+.main-bg-img {
+  background-image: linear-gradient(
+      45deg,
+      rgba(0, 0, 0, 0.308),
+      rgba(0, 0, 0, 0.295)
+    ),
+    url("./assets/imgs/IMG-20240222-WA0045.jpg");
+}
+
+.text-shadow {
+  text-shadow: 1px 2px 1px var(--primary-light);
+}
+
+.text-shadow-white {
+  text-shadow: 1px 2px 1px var(--white);
+}
