--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,15 @@
 :root {
   --primary-color: #0000ff;
   --primary-light: #5252f5;
-  --white: #fff
+  --white: #fff;
 }
 
 @layer base {
   /* Define the padding for list items */
+  * {
+    @apply scroll-smooth pointer-events-auto;
+  }
+
   li {
     @apply p-4;
   }
@@ -26,7 +30,7 @@
   }
 
   button {
-    @apply p-3 border bg-gradient-to-r from-[var(--primary-color)]  to-[var(--primary-light)] text-white rounded-md;
+    @apply p-3 border border-[var(--primary-color)] bg-gradient-to-r from-[var(--primary-color)]  to-[var(--primary-light)] text-white rounded-md;
   }
 
   .icon {
@@ -49,4 +53,114 @@
 
 .text-shadow-white {
   text-shadow: 1px 2px 1px var(--white);
+}
+
+@keyframes slide-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
+  50% {
+    opacity: 0.5;
+    transform: translateY(-5%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes slide-in-bottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30%);
+  }
+  50% {
+    opacity: 0.5;
+    transform: translateY(10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.slide-in {
+  animation: slide-in 1000ms ease-in-out;
+  transition: 300ms ease;
+}
+
+.slide-in-bottom {
+  animation: slide-in-bottom 800ms ease-in-out;
+  transition: 300ms ease;
+}
+
+.fade-in {
+  animation: fade-in 2000ms ease-in-out;
+  transition: 300ms ease;
+}
+
+/* Contact Us Page */
+/* ContactUsPage.css */
+
+.contact-us-page {
+  position: relative;
+  width: 100%;
+}
+
+/* .bg-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+} */
+
+.bg-image {
+
+  background-image: linear-gradient(
+      45deg,
+      rgba(0, 0, 0, 0.514),
+      rgba(0, 0, 0, 0.596)
+    ),
+    url("assets/imgs/custom/pexels-skylar-kang-6368842.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.bg-circles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(
+    circle,
+    rgba(255, 255, 255, 0.5) 1%,
+    transparent 50%
+  );
+  animation: moveCircles 10s infinite linear;
+}
+
+@keyframes moveCircles {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 100% 100%;
+  }
 }
